--- a/arc_manager/templates/users/emails/new_user_credentials.html
+++ b/arc_manager/templates/users/emails/new_user_credentials.html
@@ -119,7 +119,7 @@
             <p>Tu cuenta ha sido creada exitosamente</p>
         </div>
 
-        <p>Hola <strong>{{ user.first_name }} {{ user.last_name }}</strong>,</p>
+        <p>Hola {% if user.first_name or user.last_name %}<strong>{{ user.first_name }} {{ user.last_name }}</strong>{% else %}<strong>{{ user.username|default:user.email }}</strong>{% endif %},</p>
         
         <p>Se ha creado una cuenta para ti en <strong>{{ site_name }}</strong>. A continuación encontrarás tus credenciales de acceso:</p>
 
